# rdflib-r2r

./: .gitignore  plan.md  pyproject.toml  strategy.md
old_tests/: test_bsbm.py
rdflib_r2r/: __init__.py  analyze_failures.py  conversion_utils.py  expr_template.py  new_r2r_store.py  old_r2r_store.py  query_conversions.py  r2r_mapping.py  r2r_store.py  sparql_op.py  sql_converter.py  types.py
tests/: test_conversion_utils.py  test_r2r_store.py  test_rdb2rdf.py  test_resolve_path_in_triples.py  test_sql_converter.py  test_store.py
tests/northwind/: NorthwindR2RML.ttl
