[tool.poetry]
name = "rdflib_r2r"
version = "0.1.0"
description = "A wrapper for accessing existing relational databases from rdflib using r2rml rdb2rdf mappings."
authors = ["Benno Kruit <bennokr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12.3"
rdflib = "^7.1.3"
sqlalchemy = "^2.0.38"
sqlparse = "^0.5.3"
parse = "^1.20.2"
pyodbc = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-harvest = "^1.10.3"
pandas = "^1.2.4"
tabulate = "^0.8.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
